--- a/sources/custom_rh/wizard/report_special_view.xml
+++ b/sources/custom_rh/wizard/report_special_view.xml
@@ -8,12 +8,12 @@
 
                     <group>
                     <field name="start_date" string="Rango de Fechas" widget="daterange" options="{'end_date_field': 'end_date'}"  />
-
+                    <field name="department_id" string="Departamento"/>
                     </group>
                     <footer>
                         <button string="Generar" class="btn-primary" type="object" name="action_generate_csv" icon="fa-download" />
 
-                        <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="x"/>
+                        <button string="Cancelar" class="btn-secondary" special="cancel" data-hotkey="x"/>
                     </footer>
                 </form>
             </field>
